--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "axios": "^0.18.0",
+    "httpster": "^1.0.4",
     "i": "^0.3.6",
     "npm": "^6.4.1",
     "vue": "^2.5.17",
