--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy":"aws s3 sync --acl public-read --delete dist/ s3://recover.shopnitt.com"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
