--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy":"aws s3 sync --acl public-read --delete dist/ s3://recover.shopnitt.com"
+    "deploy": "aws s3 sync --acl public-read --delete dist/ s3://recover.shopnitt.com"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
@@ -17,6 +17,7 @@
     "i": "^0.3.6",
     "npm": "^6.4.1",
     "vue": "^2.5.17",
+    "vue-js-modal": "^1.3.26",
     "vue-ripple-directive": "^2.0.1"
   },
   "devDependencies": {
